# SimpleGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
res/shaders/: basic.glsl  triangle.glsl
src/: GLError.cpp  GLError.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
src/tests/: Test.cpp  Test.h  Test3DCube.cpp  Test3DCube.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  TestTriangle2D.cpp  TestTriangle2D.h
